doc/changes/package_diffs/11.1.0/template-Exasol-8-python-3.10-cuda-conda/internal_packages.md
# Internal packages comparison between flavor "Template Exasol 8 Python 3.10 Cuda Conda" in 11.1.0 and flavor "Template Exasol 8 Python 3.10 Cuda Conda" in 11.0.0

<!-- markdown-link-check-disable -->

## Apt packages

|    | Package   | Version in 11.0.0     | Version in 11.1.0     | Status   | Build-Step     |
|---:|:----------|:----------------------|:----------------------|:---------|:---------------|
|  0 | binutils  | 2.38-4ubuntu2.12      | 2.38-4ubuntu2.12      |          | base_test_deps |
|  1 | gdb       | 12.1-0ubuntu1~22.04.2 | 12.1-0ubuntu1~22.04.2 |          | base_test_deps |
|  2 | gdbserver | 12.1-0ubuntu1~22.04.2 | 12.1-0ubuntu1~22.04.2 |          | base_test_deps |
|  3 | gnupg     | No version specified  | No version specified  |          | security_scan  |
|  4 | patchelf  | 0.14.3-1              | 0.14.3-1              |          | base_test_deps |
|  5 | strace    | 5.16-0ubuntu3         | 5.16-0ubuntu3         |          | base_test_deps |
|  6 | trivy     | No version specified  | No version specified  |          | security_scan  |
|  7 | valgrind  | 1:3.18.1-1ubuntu2     | 1:3.18.1-1ubuntu2     |          | base_test_deps |

## Conda packages

|    | Package      | Version in 11.0.0   | Version in 11.1.0   | Status   | Build-Step   |
|---:|:-------------|:--------------------|:--------------------|:---------|:-------------|
|  0 | bazel        | =8.3.1              | =8.3.1              |          | build_deps   |
|  1 | chrpath      | =0.16               | =0.16               |          | build_deps   |
|  2 | gcc_linux-64 | =13.4.0             | =13.4.0             |          | build_deps   |
|  3 | gxx_linux-64 | =13.4.0             | =13.4.0             |          | build_deps   |
|  4 | make         | =4.3                | =4.3                |          | build_deps   |
|  5 | pcre         | =8.45               | =8.45               |          | build_deps   |
|  6 | protobuf     | =6.31.1             | =6.31.1             |          | build_deps   |